--- a/index.html
+++ b/index.html
@@ -14,9 +14,73 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 
   <!-- Stylesheets -->
+  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="grid.css" />
 
 </head>
 <body>
+
+<header>
+	<div class="top">
+	<div class="row">
+		<div class="col-12">
+			<h2>Star Wars Characters</h2>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-12">
+			<p>Incomplete list</p>
+		</div>
+	</div>
+	</div>
+</header>
+
+<div class="row">
+	<div class="col-4">
+		<div class="box">
+			<img src="images/rey_square.png">
+			<p class="bold">Ray</p>
+			<p>Protagonist, from Tatooine</p>
+		</div>
+	</div>
+	<div class="col-4">
+		<div class="box">
+			<img src="images/finn_square.png">
+			<p class="bold">Finn</p>
+			<p>Storm Trooper, befriends Rey</p>
+		</div>
+	</div>
+	<div class="col-4">
+		<div class="box">
+			<img src="images/kylo_square.png">
+			<p class="bold">Kylo</p>
+			<p>Main villain, or is he?</p>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-4">
+		<div class="box">
+			<img src="images/poe_square.png">
+			<p class="bold">Poe</p>
+			<p>Neutral pilot</p>
+		</div>
+	</div>
+	<div class="col-4">
+		<div class="box">
+			<img src="images/chewbacca_square.png">
+			<p class="bold">Chewbacca</p>
+			<p>A great first mate</p>
+		</div>
+	</div>
+	<div class="col-4">
+		<div class="box">
+			<img src="images/yoda_square.png">
+			<p class="bold">Yoda</p>
+			<p>Wise old Jedi master</p>
+		</div>
+	</div>
+</div>
 
 </body>
 </html>
