--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="top">
 	<div class="row">
 		<div class="col-12">
-			<h2>Star Wars Characters</h2>
+			<h1>Star Wars Characters</h1>
 		</div>
 	</div>
 	<div class="row">
@@ -39,21 +39,21 @@
 	<div class="col-4">
 		<div class="box">
 			<img src="images/rey_square.png">
-			<p class="bold">Ray</p>
+			<h3>Rey</h3>
 			<p>Protagonist, from Tatooine</p>
 		</div>
 	</div>
 	<div class="col-4">
 		<div class="box">
 			<img src="images/finn_square.png">
-			<p class="bold">Finn</p>
+			<h3>Finn</h3>
 			<p>Storm Trooper, befriends Rey</p>
 		</div>
 	</div>
 	<div class="col-4">
 		<div class="box">
 			<img src="images/kylo_square.png">
-			<p class="bold">Kylo</p>
+			<h3>Kylo</h3>
 			<p>Main villain, or is he?</p>
 		</div>
 	</div>
@@ -62,21 +62,21 @@
 	<div class="col-4">
 		<div class="box">
 			<img src="images/poe_square.png">
-			<p class="bold">Poe</p>
+			<h3>Poe</h3>
 			<p>Neutral pilot</p>
 		</div>
 	</div>
 	<div class="col-4">
 		<div class="box">
 			<img src="images/chewbacca_square.png">
-			<p class="bold">Chewbacca</p>
+			<h3>Chewbacca</h3>
 			<p>A great first mate</p>
 		</div>
 	</div>
 	<div class="col-4">
 		<div class="box">
 			<img src="images/yoda_square.png">
-			<p class="bold">Yoda</p>
+			<h3>Yoda</h3>
 			<p>Wise old Jedi master</p>
 		</div>
 	</div>
